# Tengine

./: .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  gen_int8_model.sh  tm_benchmark_int8.cc
examples/: CMakeLists.txt  tm_classification.c  tm_classification_cifar10_eval.c  tm_classification_hcw.c  tm_classification_hcw_mnist_eval.c  tm_classification_int8_cifar10_eval.c  tm_classification_int8_mnist.c  tm_classification_int8_mnist_eval.c  tm_classification_mnist_eval.c  tm_classification_opendla_cifar10_eval.c  tm_classification_uint8_cifar10_eval.c
examples/common/: tengine_operations.c  tengine_operations.h
source/api/: c_api.c
source/device/: CMakeLists.txt
source/device/cpu/: cpu_device.c
source/device/cpu/op/conv/: conv_kernel_ref_int8.c
source/device/hcw_3020/: CMakeLists.txt  dump.c  hcw_define.h  hcw_device.c  hcw_device.cc  hcw_device.h  hcw_device.hpp  hcw_executor.c  hcw_executor.cc  hcw_executor.h  hcw_executor.hpp  hcw_graph.cc  hcw_graph.hpp  hcw_limit.h  hcw_limit.hpp
source/device/hcw_3020/lib/: INetwork.h  ITensor.h  IType.h  NvDlaType.h  Tensor.cpp  mydef.h  recore_3020.c
source/device/hcw_3020/op/: hcw_conv.c  hcw_conv.cc  hcw_fc.c  hcw_fc.cc  hcw_pooling.c  hcw_pooling.cc  hcw_relu.c  mydef.h  recore_3020.c  recore_3020.h
source/device/opendla/: odla_executor.cc
source/graph/: tensor.h
source/module/: module.c
tests/op/: test_hcw_op_convolution.cpp  test_hcw_op_fc.c  test_hcw_op_pooling.cpp  test_op.h
