
# 0. clear var
UNSET (_DEV_HCW_HEADER_PATH)
UNSET (_HCW_BASE_SOURCE)
UNSET (_HCW_OPS_SOURCE)
UNSET (_DEV_HCW_DEVICE_SOURCE)

# 1.  set source root path
SET(_HCW_ROOT ${CMAKE_SOURCE_DIR}/source/device/hcw_3020)
# 2.  add header file path
LIST (APPEND _DEV_HCW_HEADER_PATH        ${_HCW_ROOT})
LIST (APPEND _DEV_HCW_HEADER_PATH        ${CMAKE_CURRENT_BINARY_DIR})
# 3.  add source files
AUX_SOURCE_DIRECTORY ("${_HCW_ROOT}"     _HCW_BASE_SOURCE)
#AUX_SOURCE_DIRECTORY ("${_HCW_ROOT}/op"  _HCW_OPS_SOURCE)
#AUX_SOURCE_DIRECTORY ("${_HCW_ROOT}/lib"  _HCW_OPS_SOURCE)


LIST (APPEND _DEV_HCW_DEVICE_SOURCE      ${_HCW_BASE_SOURCE})
LIST (APPEND _DEV_HCW_DEVICE_SOURCE      ${_HCW_OPS_SOURCE})

SET (_HCW_LIB_NAME "hcw_3020")

ADD_LIBRARY (${_HCW_LIB_NAME} STATIC)
TARGET_SOURCES (${_HCW_LIB_NAME} PRIVATE )
TARGET_SOURCES (${_HCW_LIB_NAME} PRIVATE ${_HCW_BASE_SOURCE})
TARGET_SOURCES (${_HCW_LIB_NAME} PRIVATE ${_HCW_OPS_SOURCE})

# 7. set all to cmake cache
SET (TENGINE_HCW_HEADER_PATH       ${_DEV_HCW_HEADER_PATH}        CACHE INTERNAL  "Tengine HCW device header files searching path"   FORCE)
SET (TENGINE_HCW_DEVICE_SOURCE     ${_DEV_HCW_DEVICE_SOURCE}      CACHE INTERNAL  "Tengine HCW device main source files"             FORCE)

# 8. install device option
INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/hcw_define.h DESTINATION include/tengine RENAME hcw_device.h)